# shan

./: .gitignore  conftest.py  pyproject.toml
src/: demo_calculator.py
src/dags/: demo_test_bash_dag.py
src/dags/challenge_1_taxi_data_analysis/: assignment.md
src/dags/challenge_2_taxi_data_analysis/: assignment.md  challenge_2_taxi_data_analysis.md
src/dags/wacheng/: challenge_1_taxi_data_analysis.py  challenge_2_taxi_data_analysis.py  read_yellow_taxi.py  test_bash_dag.py
src/github_copilot/: create_etl_pipeline.py
src/skill-training-local/: Dockerfile  README.md  airflow_init.sh  connections.yaml  docker-compose.yaml  entrypoint.sh  requirements.txt  variables.json
test/integration/: test_integration.py
test/unit/: test_copilot_create_etl_pipeline.py  test_unit.py
